# RustyFit

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs  processing.rs  templates.rs
src/processing/: display.rs  mod.rs  parse.rs  preprocess.rs  summary.rs  types.rs
templates/: landing.html
tests/: processing.rs  web.rs
