[package]
name = "RustyFit"
version = "0.1.0"
edition = "2024"

[lib]
name = "rustyfit"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
http-body-util = "0.1"
tower = { version = "0.4", features = ["util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
fitparser = { git = "https://github.com/mrRo8o7/fitparse-rs", branch = "enable-writing-FIT-files" }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
